--- a/app/views/layouts/_userinfo.html.erb
+++ b/app/views/layouts/_userinfo.html.erb
@@ -1,56 +1,65 @@
   <!--userinfo-->
 
   <div class="col-xs-3">
-        <h2>User info</h2>
-        <table class="table">
-          <tr>
+      <h2>User info</h2>
+      <table class="table">
+        <tr>
+          <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+        </tr>
+        <tr>
+          <th>name</th>
+          <th><%= user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= user.introduction %></th>
+        </tr>
+      </table>
 
-            <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+      <!--アイコンボタン-->
+      <div class="row">
 
-          </tr>
-          <tr>
-            <th>name</th>
-            <th><%= user.name %></th>
-          </tr>
-          <tr>
-            <th>introduction</th>
-            <th><%= user.introduction %></th>
-          </tr>
-          <tr>
-           <!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
-           <th>
-            <%= link_to edit_user_path(user) do%>
-            <button type="button" class="btn btn-default" aria-label="Left Align">
-             <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-             </button>
-             <% end %>
-         	 </th>
-      	</tr>
-     	</table>
-
+        <%= link_to  edit_user_path(user), class:'col-xs-12 btn btn-default' do %>
+          <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+        <% end %>
+      </div>
+     
 
 
       <!--新規投稿ページ-->
-      <h1>New book</h1>
-      <%= form_for(book) do |f| %>
 
-      <% if book.errors.any? %>
-        <div class="alert">
-          <h2><%= pluralize(user.errors.count, "error")%>prohibited this obj from being saved:</h2>
+      <h2>New book</h2>
+      <div class="form-group" role="form">
+          <%= form_for(book) do |f| %>
 
-          <ul>
-            <% book.errors.full_messages.each do |message| %>
-              <li><%= message %></li>s
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
-      <p>Title</p>
-      <%= f.text_field :title %>
-      <p>Opinion</p>
+              <% if book.errors.any? %>
+                <div class="alert">
+                  <h2>
+                    <%= pluralize(user.errors.count, "error")%>prohibited this obj from being saved:
+                  </h2>
+                  <ul>
+                    <% book.errors.full_messages.each do |message| %>
+                      <li><%= message %></li>s
+                    <% end %>
+                  </ul>
+                </div>
+              <% end %>
 
-      <%= f.text_area :body %>
-      <%= f.submit 'Create Book', class:"btn btn-primary" %>
-      <% end %>
-    </div>
+              <div class="field row">
+                <label>Title</label>
+                <input class="col-xs-12" type="text" name="title" class="form-control">
+              </div>
+
+              <div class="field row">
+                <label>Opinion</label>
+                <textarea class="col-xs-12" name="book_body"></textarea>
+              </div>
+
+              <div class="actions row">
+                    <input type="submit" name="commit" value="Create Book" class="btn btn-primary col-xs-12">
+              </div>
+
+          <% end %>
+      </div>
+  </div>
 
