--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,6 +8,19 @@
           <%= form_for(@book) do |f| %>
 
            <!--エラーメッセージを挿入user/edit-->
+                <% if @book.errors.any? %>
+                  <div class="alert">
+                    <h2><%= pluralize(@book.errors.count, "error")%>prohibited this obj from being saved:</h2>
+
+                    <ul>
+                      <% @book.errors.full_messages.each do |message| %>
+                        <li><%= message %></li>s
+                      <% end %>
+                    </ul>
+                  </div>
+                <% end %>
+
+
             <div class="field row">
                 <label>Title</label>
                 <%= f.text_field :title, class:'form-control col-xs-12' %>
