--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -21,10 +21,10 @@
         </thead>
 
         <tbody>
-          <!--user.books　追記-->
+
           <% @books.each do |book| %>
-          <tr>
-            <td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>
+          <tr><!--本の投稿をしたユーザーの画像-->
+            <td><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>
             <th><%= link_to book.title, book_path(book) %></th>
 
             <td><%= book.body %></td>
