--- a/app/views/layouts/_userinfo.html.erb
+++ b/app/views/layouts/_userinfo.html.erb
@@ -18,7 +18,7 @@
       </table>
 
       <!--アイコンボタン-->
-      <div class="row">
+      <div class="">
 
         <%= link_to  edit_user_path(user), class:'col-xs-12 btn btn-default' do %>
           <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
