--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,39 +1,43 @@
 <div class="container">
-  <div clsss="row">
-    <!--use info -->
-    <!--current_userとしないとエラーになった-->
-    <div class="col-xs-3">
-      <%= render 'layouts/userinfo', user: current_user, book: @book %>
-   </div>
 
-    <!--book一覧-->
-    <div class="col-xs-9">
-      <h2>Books</h2>
+  <!--エラーメッセ-->
+  <%= render 'layouts/error_messages', model: @book %>
 
-      <table class="table table-hover table-inverse">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Title</th>
-            <th>Opinion</th>
-            <th colspan="3"></th>
-         </tr>
-        </thead>
+    <div clsss="row">
+      <!--use info -->
+      <!--current_userとしないとエラーになった-->
+      <div class="col-xs-3">
+        <%= render 'layouts/userinfo', user: current_user, book: @book %>
+     </div>
 
-        <tbody>
+      <!--book一覧-->
+      <div class="col-xs-9">
+        <h2>Books</h2>
 
-          <% @books.each do |book| %>
-          <tr><!--本の投稿をしたユーザーの画像-->
-            <td><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>
-            <th><%= link_to book.title, book_path(book) %></th>
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+           </tr>
+          </thead>
 
-            <td><%= book.body %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+          <tbody>
+
+            <% @books.each do |book| %>
+            <tr><!--本の投稿をしたユーザーの画像-->
+              <td><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>
+              <th><%= link_to book.title, book_path(book) %></th>
+
+              <td><%= book.body %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+
     </div>
-
   </div>
-</div>
 
