--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,36 +1,36 @@
 <div class="container">
+  <!--エラーメッセ-->
+  <%= render 'layouts/error_messages', model: @user %>
+    <div clsss="row">
 
-  <div clsss="row">
+      <div class="col-xs-3">
+        <!--user info-->
+    　　 <%= render 'layouts/userinfo', user: current_user, book: @book %>
+      </div>
 
-    <div class="col-xs-3">
-      <!--user info-->
-  　　 <%= render 'layouts/userinfo', user: current_user, book: @book %>
+
+      <!-- user一覧-->
+  　  <div class="col-xs-9">
+    　   <h1>Users</h1>
+     　  <table class="table">
+       　  　<thead>
+        　　  　<tr>
+         　　　  　<th>image</th>
+         　　　　  <th>name</th>
+       　　　  　</tr>
+     　　　  </thead>
+    　　　   <tbody>
+      　　   <% @users.each do |user| %>
+       　　　  　<tr>
+         　　　  　<td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', size:'40x40' %></td>
+                  <td><%= user.name %></td>
+                  <td><%= link_to "Show", user_path(user.id) %></td>
+                    <!--投稿をしたユーザーに紐づく-->
+                </tr>
+            <% end %>
+            </tbody>
+          </table>
+      </div>
     </div>
-
-
-    <!-- user一覧-->
-　  <div class="col-xs-9">
-  　   <h1>Users</h1>
-   　  <table class="table">
-     　  　<thead>
-      　　  　<tr>
-       　　　  　<th>image</th>
-       　　　　  <th>name</th>
-     　　　  　</tr>
-   　　　  </thead>
-  　　　   <tbody>
-    　　   <% @users.each do |user| %>
-     　　　  　<tr>
-       　　　  　<td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', size:'40x40' %></td>
-                <td><%= user.name %></td>
-                <td><%= link_to "Show", user_path(user.id) %></td>
-                  <!--投稿をしたユーザーに紐づく-->
-              </tr>
-          <% end %>
-          </tbody>
-        </table>
-    </div>
-
-  </div>
 
 </div>
