--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,40 +1,30 @@
   <div class="container">
+
 	<h2>User info</h2>
+		<%= render 'layouts/error_messages', model: @user %>
+	
+		<div class="form-group" role="form">
 
-	<div class="form-group" role="form">
+			<%= form_for(@user) do |f| %>
 
-		<%= form_for(@user) do |f| %>
-		<!--エラーメッセ挿入、パーシャル-->
-			<% if @user.errors.any? %>
-			<div class="alert">
-				<h2><%= pluralize(@user.errors.count, "error")%>prohibited this obj from being saved:</h2>
+				<div class="field">
+					<label>Name</label>
+					<%= f.text_field :name %>
+				</div>
 
-				<ul>
-					<% @user.errors.full_messages.each do |message| %>
-					<li><%= message %></li>s
-					<% end %>
-				</ul>
-			</div>
+				<div class="field">
+					<label>Image</label>
+					<%= f.attachment_field :profile_image %>
+				</div>
+
+				<div class="field">
+					<label>Introduction</label>
+					<%= f.text_area :introduction %>
+				</div>
+
+				<div class="actions">
+					<input type="submit" name="commit" value="Update User" data-disable-with="Update User" >
+				</div>
 			<% end %>
-
-			<div class="field">
-				<label>Name</label>
-				<%= f.text_field :name %>
-			</div>
-
-			<div class="field">
-				<label>Image</label>
-				<%= f.attachment_field :profile_image %>
-			</div>
-
-			<div class="field">
-				<label>Introduction</label>
-				<%= f.text_area :introduction %>
-			</div>
-
-			<div class="actions">
-				<input type="submit" name="commit" value="Update User" data-disable-with="Update User" >
-			</div>
-		<% end %>
-	</div>
+		</div>
 </div>
