--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,7 +28,11 @@
 
             <% @books.each do |book| %>
             <tr><!--本の投稿をしたユーザーの画像-->
-              <td><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>
+              <td><%= link_to user_path(book.user.id) do %>
+                <%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %>
+                  <% end %>
+              </td>
+
               <th><%= link_to book.title, book_path(book) %></th>
 
               <td><%= book.body %></td>
