--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@
                   <%= link_to user_path(@user) do %>
                   <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %>
                   <% end %>
-               </td>　　　<!--あくまでuserに紐づいている-->
+               </td>　　　<!--attachment_image_tagはあくまでuserに紐づいている-->
                <td>
                   <%= link_to book.title, book_path(book) %>
                </td>
